# ycitoj-judge-server

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config.json  init.sh  mak.sh  mak_judger.sh  rm_tmp.sh  test  test.cpp
comp/: comp.sh
judge-core/: judger  judger_linux
judger/: judger_linux
prob/0/1/cases/: config.json
server/: judge-server
settings/: default.json  default.txt
src/: GUI.cpp  GUI.h  compare.cpp  compare.h  definitions.cpp  definitions.h  file.cpp  file.h  headfile.h  judge.cpp  judge.h  main.cpp  message.cpp  message.h  net.cpp  net.h  util.cpp  util.h  utile.cpp  utile.h
src/compare/: comp.cpp  comp.sh
src/connector/: connector.cpp  connector.h
src/judge/: judge.cpp  judge.h  judger
src/type/: types  types.cpp  types.h
sub/: 1.cpp  120.cpp  127.cpp  3.cpp  5.cpp  6.cpp  8.cpp
